--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "sokil/php-isocodes",
+    "license" : "MIT",
     "description": "ISO country, subdivision, language, currency and script definitions and their translations. Based on pythons pycountry.",
     "authors": [
         {
