--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ php:
 
 before_script:
   - composer install --dev --no-interaction
+  - uname -a
+  - locale -a
   
 script:
   - mkdir -p build/logs
