--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,10 @@
     "require": {
 
     },
+    "require-dev": {
+        "satooshi/php-coveralls": "dev-master",
+        "phpunit/phpunit": "3.7.*"
+    }
     "autoload": {
         "psr-0": {
             "Sokil": "src/"
