--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,15 @@
 
     },
     "require-dev": {
-        "satooshi/php-coveralls": "dev-master",
-        "phpunit/phpunit": "3.7.*"
+        "phpunit/phpunit": ">=3.7.38 <6.0",
+        "satooshi/php-coveralls": ">=0.7.1 <2.0"
     },
     "autoload": {
-        "psr-0": {
-            "Sokil": "src/"
+        "psr-4": {
+            "Sokil\\": "src/"
         }
+    },
+    "scripts": {
+        "test": "./vendor/bin/phpunit -c ./tests/phpunit.xml ./tests"
     }
 }
