--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,25 @@
+sudo: false
+
+dist: trusty
+
 language: php
+
 php:
+  - nightly
+  - 7.2
+  - 7.1
+  - 7.0
   - 5.6
   - 5.5
   - 5.4
   - 5.3
+
+matrix:
+  allow_failures:
+    - php: nightly
+  include:
+    - php: "5.3"
+      dist: precise
 
 before_script:
   - composer install --dev --no-interaction
@@ -11,7 +27,7 @@ before_script:
   
 script:
   - mkdir -p build/logs
-  - phpunit --bootstrap ./tests/bootstrap.php -c tests/phpunit.xml --coverage-clover build/logs/clover.xml tests
+  - composer cover
   
 after_script:
-  - php ./vendor/bin/coveralls -v
+  - composer coveralls
