--- a/composer.json
+++ b/composer.json
@@ -8,19 +8,19 @@
             "email": "dmytro.sokil@gmail.com"
         }
     ],
-    "require": {
-
-    },
     "require-dev": {
         "phpunit/phpunit": ">=3.7.38 <6.0",
         "satooshi/php-coveralls": ">=0.7.1 <2.0"
     },
     "autoload": {
         "psr-4": {
-            "Sokil\\": "src/"
-        }
+            "Sokil\\IsoCodes\\": "src/"
+        },
+        "classmap": ["stubs/"]
     },
     "scripts": {
-        "test": "./vendor/bin/phpunit -c ./tests/phpunit.xml ./tests"
+        "test": "./vendor/bin/phpunit -c ./tests/phpunit.xml ./tests",
+        "cover": "./vendor/bin/phpunit -c ./tests/phpunit.xml --coverage-clover .build/logs/clover.xml ./tests",
+        "coveralls": "./vendor/bin/coveralls -v"
     }
 }
