--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ matrix:
     - php: nightly
 
 before_script:
-  - composer install --dev --no-interaction
+  - composer install --no-interaction
   - sudo locale-gen uk_UA.UTF-8
   
 script:
