--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
     },
     "require-dev": {
         "phpunit/phpunit": ">=3.7.38 <6.0",
-        "satooshi/php-coveralls": ">=0.7.1 <2.0"
+        "satooshi/php-coveralls": ">=0.7.1 <2.0",
+        "infection/infection": "^0.6",
+        "squizlabs/php_codesniffer": "^2.3",
+        "phpmd/phpmd" : "@stable"
     },
     "autoload": {
         "psr-4": {
@@ -24,6 +27,9 @@
     "scripts": {
         "test": "./vendor/bin/phpunit -c ./tests/phpunit.xml ./tests",
         "cover": "./vendor/bin/phpunit -c ./tests/phpunit.xml --coverage-clover ./build/logs/clover.xml ./tests",
-        "coveralls": "./vendor/bin/coveralls -v"
+        "coveralls": "./vendor/bin/coveralls -v",
+        "infection": "./vendor/bin/infection",
+        "check-style": "./vendor/bin/phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src",
+        "fix-style": "./vendor/bin/phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src"
     }
 }
