--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Sokil\\IsoCodes\\": "src/"
+            "Sokil\\IsoCodes\\": ["src/", "tests/", "benchmarks/"]
         },
         "classmap": ["stubs/"]
     },
@@ -28,6 +28,8 @@
         "cover": "./vendor/bin/phpunit -c ./tests/phpunit.xml --coverage-clover ./build/logs/clover.xml ./tests",
         "coveralls": "./vendor/bin/coveralls -v",
         "check-style": "./vendor/bin/phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src",
-        "fix-style": "./vendor/bin/phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src"
+        "fix-style": "./vendor/bin/phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src",
+        "bench": "phpbench run benchmarks/  --report=aggregate",
+        "infection": "infection"
     }
 }
