--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "php": ">=5.5"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=3.7.38 <6.0",
+        "phpunit/phpunit": "^4.8 || ^6.5",
         "satooshi/php-coveralls": ">=0.7.1 <2.0",
         "squizlabs/php_codesniffer": "^2.3",
         "phpmd/phpmd" : "@stable"
