--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,14 @@
     },
     "autoload": {
         "psr-4": {
-            "Sokil\\IsoCodes\\": ["src/", "tests/", "benchmarks/"]
+            "Sokil\\IsoCodes\\": ["src/", "benchmarks/"]
         },
         "classmap": ["stubs/"]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Sokil\\IsoCodes\\": "tests/"
+        }
     },
     "scripts": {
         "test": "./vendor/bin/phpunit -c ./tests/phpunit.xml ./tests",
