--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         }
     ],
     "require": {
-        "php": ">=5.5"
+        "php": ">=5.5",
+        "ext-gettext": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8 || ^6.5",
