fix update script

--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,8 @@
         "check-style": "./vendor/bin/phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src",
         "fix-style": "./vendor/bin/phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src",
         "bench": "phpbench run benchmarks/  --report=default",
-        "infection": "infection"
+        "infection": "infection",
+        "release": "./bin/release.sh",
+        "update_iso_codes_db": "./bin/update_iso_codes_db.sh"
     }
 }
