--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "ext-gettext": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8 || ^6.5",
+        "phpunit/phpunit": "^7.0",
         "php-coveralls/php-coveralls": "^2.1",
         "squizlabs/php_codesniffer": "^3.4",
         "phpmd/phpmd" : "@stable"
