Upgrade version of php-coveralls
Signed-off-by: Henrique Moody <henriquemoody@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8 || ^6.5",
-        "satooshi/php-coveralls": ">=0.7.1 <2.0",
+        "php-coveralls/php-coveralls": "^2.1",
         "squizlabs/php_codesniffer": "^2.3",
         "phpmd/phpmd" : "@stable"
     },
@@ -32,7 +32,7 @@
     "scripts": {
         "test": "./vendor/bin/phpunit -c ./tests/phpunit.xml ./tests",
         "cover": "./vendor/bin/phpunit -c ./tests/phpunit.xml --coverage-clover ./build/logs/clover.xml ./tests",
-        "coveralls": "./vendor/bin/coveralls -v",
+        "coveralls": "./vendor/bin/php-coveralls -v",
         "check-style": "./vendor/bin/phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src",
         "fix-style": "./vendor/bin/phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src",
         "bench": "phpbench run benchmarks/  --report=default",
