--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "phpunit/phpunit": "^7.0",
         "php-coveralls/php-coveralls": "^2.1",
         "squizlabs/php_codesniffer": "^3.4",
-        "phpmd/phpmd" : "@stable"
+        "phpmd/phpmd" : "@stable",
+        "phpbench/phpbench": "^0.16.9"
     },
     "autoload": {
         "psr-4": {
@@ -35,7 +36,7 @@
         "coveralls": "./vendor/bin/php-coveralls -v",
         "check-style": "./vendor/bin/phpcs -p src",
         "fix-style": "./vendor/bin/phpcbf -p src",
-        "bench": "phpbench run benchmarks/  --report=default",
+        "bench": "./vendor/bin/phpbench run benchmarks/  --report=default",
         "infection": "infection",
         "release": "./bin/release.sh",
         "update_iso_codes_db": "./bin/update_iso_codes_db.sh"
