move phpc s rules to config

--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,8 @@
         "test": "./vendor/bin/phpunit -c ./tests/phpunit.xml ./tests",
         "cover": "./vendor/bin/phpunit -c ./tests/phpunit.xml --coverage-clover ./build/logs/clover.xml ./tests",
         "coveralls": "./vendor/bin/php-coveralls -v",
-        "check-style": "./vendor/bin/phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src",
-        "fix-style": "./vendor/bin/phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src",
+        "check-style": "./vendor/bin/phpcs -p src",
+        "fix-style": "./vendor/bin/phpcbf -p src",
         "bench": "phpbench run benchmarks/  --report=default",
         "infection": "infection",
         "release": "./bin/release.sh",
