--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ before_script:
 script:
   - mkdir -p build/logs
   - composer cover
+  - composer check-style
 
 after_script:
   - composer coveralls
