--- a/composer.json
+++ b/composer.json
@@ -36,8 +36,8 @@
         "test": "./vendor/bin/phpunit",
         "cover": "./vendor/bin/phpunit --coverage-clover ./build/logs/clover.xml",
         "coveralls": "./vendor/bin/php-coveralls -v",
-        "check-style": "./vendor/bin/phpcs -p src",
-        "fix-style": "./vendor/bin/phpcbf -p src",
+        "check-style": "./vendor/bin/phpcs",
+        "fix-style": "./vendor/bin/phpcbf",
         "bench": "./vendor/bin/phpbench run benchmarks/  --report=default",
         "infection": "infection",
         "release": "./bin/release.sh",
