--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -1,6 +1,9 @@
 <?xml version="1.0"?>
 <ruleset name="php-isocodes">
     <description>PSR2 + extended checks</description>
+    <arg value="p" />
+    <arg value="s" />
+    <file>src/</file>
     <config name="ignore_errors_on_exit" value="1"/>
     <config name="ignore_warnings_on_exit" value="1"/>
     <rule ref="PSR2"/>
