--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "require": {
         "php": ">=7.1",
-        "ext-gettext": "*"
+        "ext-gettext": "*",
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0",
