Set code style to PSR12

--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,7 @@
         "php-coveralls/php-coveralls": "^2.1",
         "squizlabs/php_codesniffer": "^3.4",
         "phpmd/phpmd" : "@stable",
-        "phpbench/phpbench": "^0.16.9",
-        "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
-        "slevomat/coding-standard": "^5.0"
+        "phpbench/phpbench": "^0.16.9"
     },
     "autoload": {
         "psr-4": {
