--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ dist: trusty
 language: php
 
 php:
-  - 8.0
   - 7.4
   - 7.3
   - 7.2
@@ -28,12 +27,12 @@ jobs:
     - php: 8.0
 
   include:
-    - stage: Quality assurance
-      env: CODE_COVERAGE
+    - stage: Code Coverage
+      php: 7.4
       before_script:
         - mkdir -p build/logs
       script: composer cover
       after_script: composer coveralls
-    - stage: Quality assurance
-      env: CODE_STANDARDS
+    - stage: Code Standarts
+      php: 7.4
       script: composer check-style
