--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,19 +1,21 @@
 <?xml version="1.0"?>
 <phpunit
-  colors="true"
-  bootstrap="tests/bootstrap.php"
-  convertErrorsToExceptions="true"
-  convertNoticesToExceptions="true"
-  convertWarningsToExceptions="true"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd"
+        colors="true"
+        bootstrap="tests/bootstrap.php"
+        convertErrorsToExceptions="true"
+        convertNoticesToExceptions="true"
+        convertWarningsToExceptions="true"
 >
+  <coverage>
+    <include>
+      <directory>src</directory>
+    </include>
+  </coverage>
   <testsuites>
     <testsuite name="AllTests">
       <directory>tests/</directory>
     </testsuite>
   </testsuites>
-  <filter>
-    <whitelist>
-      <directory>src</directory>
-    </whitelist>
-  </filter>
 </phpunit>
