--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "php-coveralls/php-coveralls": "^2.1",
         "squizlabs/php_codesniffer": "^3.4",
         "phpmd/phpmd" : "@stable",
-        "phpbench/phpbench": "^0.16.9"
+        "phpbench/phpbench": "^0.16.9",
+        "symfony/translation": "^5.2"
     },
     "autoload": {
         "psr-4": {
@@ -29,6 +30,9 @@
         "psr-4": {
             "Sokil\\IsoCodes\\": ["tests/", "benchmarks/"]
         }
+    },
+    "suggest": {
+        "symfony/translation": "Translation driver by Symfont project"
     },
     "scripts": {
         "test": "./vendor/bin/phpunit",
