--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "ext-json": "*"
     },
     "require-dev": {
+        "ext-gettext": "*",
         "phpunit/phpunit": ">=7.5.20",
         "php-coveralls/php-coveralls": "^2.1",
         "squizlabs/php_codesniffer": "^3.4",
