--- a/infection.json.dist
+++ b/infection.json.dist
@@ -13,7 +13,7 @@
         "summary": "build/infection/summary.log",
         "perMutator": "build/infection/perMutator.md",
         "badge": {
-            "branch": "master"
+            "branch": "3.0"
         }
     }
 }
