run psalm on ci

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -100,3 +100,6 @@ jobs:
 
       - name: Run style checks
         run: composer check-style
+
+      - name: Run static analyse
+        run: composer psalm
